stylesheets.css
#topMainImage{
    width:100%;
    height: 100vh;
    background-color: #f9c48e;
}

#headerImage{
    width:100%;
    height:100vh;
    z-index: -1;
    opacity: 0.4;
}

.container{
    position: absolute;
    margin-top: 60px;
    margin-left: 4%;
    z-index: 2;
    font-size: 20px;
    height: 200px;
    background-color: #fffdfc;
}

#naviagtion{
    position: absolute;
    top:5vh;
    font-size: 1em;
}

#logoPosition{
    position: absolute;
    top: 35vh; 
    text-align: center;
}

#logo{
    width:100%;
    z-index: 2;
    height:30vh;
    display:block;
    object-fit: cover; 
}

#graphics{
    margin-top: 10vh;
    margin-bottom: 5vh;
    text-align: center;
    font-size: 4em;
}

#gallery{
    object-fit: cover;
    height: 30vh;
    float:left;
    width:100%;
    padding-top:10px;
}
 img{
     width:100%;
     display:block;
     margin: 0px;
     padding: 0px;
 }

